A typing speed calculator

--- a/Index.html
+++ b/Index.html
@@ -11,13 +11,14 @@
     <p id="showSentence"></p>
 
     <div class="typing_section">
-        <label for="textarea"></label>
-        <textarea name="textarea" id="textarea" cols="30" rows="10" disabled></textarea>
+        <!--<label for="textarea"></label>-->
+        <textarea name="textarea" id="textarea" cols="30" rows="10" placeholder="" disabled></textarea>
         <br>
         <button id="btn">Start</button>
     </div>
 <div class = "resultArea">
     <p id="score"></p>
+    <p id="accurancy"></p>
 </div>
 <script src="script.js"></script>
 </body>
