--- a/Index.html
+++ b/Index.html
@@ -3,14 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=yes">
-    <title>TypeSpeed</title>
-    <link rel="stylesheet" href="Style.css">
+    <title>Tyspeed</title>
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/128/1041/1041157.png">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Contact Us</a></li>
+          <li class = "sign-in"><a href="#">Sign in</a></li>
+        </ul>
+      </nav>
     <main>
         <h1>
             <img src="https://cdn-icons-png.flaticon.com/128/1041/1041157.png">
-            TypeSpeed
+            Tyspeed
         </h1>
         <div id="header">
             <div id="info"></div>
@@ -24,6 +32,6 @@
             <div id="focus-error">Click here to focus</div>
         </div>
     </main>
-    <script src="Script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
