--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=yes">
     <title>Tyspeed</title>
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/128/1041/1041157.png">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
     <nav>
@@ -32,6 +32,6 @@
             <div id="focus-error">Click here to focus</div>
         </div>
     </main>
-    <script src="script.js"></script>
+    <script src="Script.js"></script>
 </body>
 </html>
