--- a/Index.html
+++ b/Index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="Style.css">
 </head>
 <body>
-    <nav>
+<!--     <nav>
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">Contact Us</a></li>
           <li class = "sign-in"><a href="#">Sign in</a></li>
         </ul>
-      </nav>
+      </nav> -->
     <main>
         <h1>
             <img src="https://cdn-icons-png.flaticon.com/128/1041/1041157.png">
